src/Components/Footer/footer.css
footer {
  bottom: 0;
  height: 3.75rem;
  width: 100%;
  background-color: #faa549ff;;
  margin-top: 10px;
  color: white;
  padding: 10px 25px;
  text-align: center;
}

footer a {
  color: white;
  font-size: 0.75rem;
}

footer a:hover{
  color: #f08782
}

footer p, h4 {
  padding-top: 5px;
  margin: 0 auto;
  font-size: 0.65rem;
}

@media screen and (max-width: 768px) {
  footer h4 {
    font-size: 0.75rem;
  }

  footer a {
    font-size: 0.5rem;
  }
}

@media screen and (max-width: 428px) {
  footer h4 {
    font-size: 0.65rem;
  }

  footer a {
    font-size: 0.45rem;
  }
}

